# web-app-yadro-impuls

./: .env  Dockerfile  Dockerfile.test  README.md  docker-compose.yaml  logging_config.yaml  main.py  pyproject.toml
app/api/: user.py
app/core/: config.py  log_filter.py
app/db/: count_users.py  db_manager.py  initial_data.py  load_new_users.py
app/db/crud/: user.py
app/db/models/: user.py
app/schemas/: user.py
app/templates/: base.html  index.html  user.html
app/utils/: api_client.py  process_data.py  templates.py
tests/: conftest.py  test_api.py  test_utils.py
